# agentic-financial-intelligence-platform

./: .dockerignore  .env.example  .gitignore  AGENT_VALIDATION_REPORT.md  API_REFERENCE.md  API_VALIDATION_REPORT.md  ARCHITECTURE_SUMMARY.md  ARCHITECTURE_UPDATE.md  BUG_REPORT.md  BUILD_VERIFICATION_REPORT.md  CHANGED_FILES.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  COPILOT_ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  DOCKER_VALIDATION_REPORT.md  Dockerfile  ENTITY_RECOGNITION_REPORT.md  FINAL_BUG_REPORT.md  FINAL_PHASE5_RELEASE_REPORT.md  FINAL_PROJECT_AUDIT.md  FINAL_RELEASE_CERTIFICATE.md  FINAL_RELEASE_REPORT.md  FINAL_TEST_AUDIT.md  FINAL_TEST_COUNT_REPORT.md  FINAL_TEST_REPORT.md  FIX_REPORT.md  FOLDER_REFACTOR_PLAN.md  GITHUB_TOPICS.md  IMPLEMENTATION_REPORT.md  JARVIS_INTEGRATION_GUIDE.md  LARGE_FILE_REPORT.md  LICENSE  MAINTENANCE_POLICY.md  MIGRATION_NOTES.md  MODULE_SUMMARY.md  NEXT_PHASE_PLAN.md  PERFORMANCE_REPORT.md  PERFORMANCE_REVIEW.md  PHASE2.3_RELEASE_NOTES.md  (+43 more)
advanced_portfolio/: __init__.py  copula.py  monte_carlo.py  risk_decomposition.py  scenario.py  stress_test.py
api/: copilot_endpoints.py  main.py  research_endpoints.py
approval/: workflow.py
autonomous_research/: __init__.py  agent_debate.py  confidence_scorer.py  contradiction_detector.py  evidence_ranker.py  multi_agent_debate.py  research_synthesizer.py  thesis_generator.py
collaboration/: __init__.py  consensus.py  coordinator.py  delegation.py  knowledge.py
config/: README.md  logging.py  logging_config.py  settings.py
copilot/: __init__.py  agent.py  assistant.py  conversation.py  (+1 more)
(+291 files in other folders)
