[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-research-agent"
version = "0.1.0"
description = "Financial Research Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Leela"}]
dependencies = [
    "python-dotenv==1.0.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "openai==1.51.0",
    "anthropic==0.34.2",
    "langgraph==0.2.28",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "chromadb==0.5.5",
    "pypdf==4.3.1",
    "tiktoken==0.7.0",
    "fastapi==0.112.2",
    "uvicorn[standard]==0.30.6",
    "streamlit==1.38.0",
    "sqlalchemy==2.0.32",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.2",
    "requests==2.32.3",
    "pandas==2.2.2",
]

[tool.setuptools]
packages = {find = {}}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]